fixed files fetching

--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part I. Data Loading and Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -18,7 +25,6 @@
     "import h5py\n",
     "import os, glob\n",
     "import re\n",
-    "import itertools\n",
     "from datetime import datetime, date, time\n",
     "from six import iteritems\n",
     "\n"
@@ -32,95 +38,148 @@
    "source": [
     "class Blond(object):\n",
     "    \"\"\"\n",
-    "        TODO: figure out how to close files\n",
+    "        class blond: attributes: date, list of files\n",
     "    \"\"\"\n",
+    "    _SD_centered = []\n",
+    "    _SD_calibrated = []\n",
     "    \n",
-    "    def __init__(self, date):\n",
+    "    def __init__(self, date, day_data = {}):\n",
     "        self.date = date\n",
-    "        \n",
-    "    # start(end)_hours_minutes\n",
-    "    def read_clear(self, start_hm, end_hm):\n",
-    "        path_to_files = './data/clear/'\n",
-    "        files_all = next(os.walk(path_to_files))[2]  \n",
-    "        \n",
-    "        for file_name in files_all:            \n",
-    "            pattern = r'(\\d{4}-\\d{2}-\\d{2}T\\d{2}-\\d{2}-\\d{2})'\n",
-    "            regex_obj = re.search(pattern, file_name)\n",
-    "            \n",
-    "            if regex_obj is not None:\n",
-    "                ts_format = regex_obj.group(1)\n",
-    "                file_hm = datetime.strptime(ts_format, '%Y-%m-%dT%H-%M-%S').time()\n",
+    "        self._day_data = day_data\n",
     "\n",
-    "                if start_hm <= file_hm <= end_hm:\n",
-    "                    yield h5py.File(path_to_files + file_name,'r+')\n",
-    "                         \n",
-    "            \n",
-    "    def read_medal(self, start_hm, end_hm):\n",
     "        \n",
-    "        \"\"\"\n",
-    "            each MEDAL is located in a separate folder, thus, we search each folder\n",
-    "        \"\"\"\n",
-    "        path_to_files = './data/medal*/'\n",
-    "        for folder in glob.glob(path_to_files):            \n",
-    "            files_all = next(os.walk(folder))[2]  \n",
-    "        \n",
-    "            for file_name in files_all:            \n",
-    "                pattern = r'(\\d{4}-\\d{2}-\\d{2}T\\d{2}-\\d{2}-\\d{2})'\n",
-    "                regex_obj = re.search(pattern, file_name)\n",
-    "                \n",
-    "                if regex_obj is not None:\n",
-    "                    ts_format = regex_obj.group(1)\n",
-    "                    file_hm = datetime.strptime(ts_format, '%Y-%m-%dT%H-%M-%S').time()\n",
-    "\n",
-    "                    if start_hm <= file_hm <= end_hm:\n",
-    "                        yield h5py.File(folder + file_name, 'r+') \n",
-    "                        \n",
-    "                    \n",
-    "                     \n",
-    "    def it_center_signal(self, it_medal, signal):\n",
-    "        \"\"\"no DC_offset in CLEAR data\"\"\"   \n",
-    "        for data in it_medal:\n",
-    "            DC_offset = data[signal].attrs['removed_offset']\n",
-    "            data[signal][:] = data[signal][:] + DC_offset\n",
-    "            yield data\n",
-    "            \n",
-    "    def it_calibrate(self, it_data, signal):\n",
-    "        for data in it_data:\n",
-    "            factor = data[signal].attrs['calibration_factor']\n",
-    "            data[signal][:] = (data[signal][:] * factor)\n",
-    "            yield data\n",
-    "        \n",
-    "            \n",
-    "        \n",
-    "    def merge_into_dict(self, it_data, signal):\n",
-    "        \n",
-    "        signal_dict = dict()\n",
-    "        for i, data in enumerate(it_data):   \n",
-    "            \"\"\" Dictionary output:\n",
-    "                {0: <HDF5 dataset \"current1\": shape (15000000,), type \"<i2\">,\n",
-    "                1: <HDF5 dataset \"current1\": shape (15000000,), type \"<i2\">,\n",
-    "                ...\n",
-    "            \"\"\"\n",
-    "            signal_dict[i] = data[signal] \n",
-    "        \n",
-    "        return signal_dict     \n",
+    "    def list_files(self):\n",
+    "        return self._day_data\n",
     "    \n",
-    "          \n",
-    "     "
+    "    \n",
+    "    @staticmethod\n",
+    "    def _regex_map(pattern, strings_list):\n",
+    "\n",
+    "        regex_func = lambda f: re.search(pattern, f)\n",
+    "        filter_list = map(regex_func, strings_list)\n",
+    "        filter_list = filter(lambda x: x is not None, list(filter_list))\n",
+    "        filter_list = map(lambda x: x.group(1), list(filter_list))\n",
+    "        return list(filter_list)\n",
+    "    \n",
+    "\n",
+    "    def _read_files_from_folder(self, files, start_ts, end_ts):\n",
+    "        \"\"\"gets file in the folder w.r.t. to the timeframe start_ts - end_ts\"\"\"\n",
+    "        pattern = r'(\\d{4}-\\d{2}-\\d{2}T\\d{2}-\\d{2}-\\d{2})'\n",
+    "        timestamps = self._regex_map(pattern, files)\n",
+    "        time_format = '%Y-%m-%dT%H-%M-%S'\n",
+    "        timestamps = list(map(lambda ts: datetime.strptime(ts, time_format ).time(), timestamps))\n",
+    "\n",
+    "        \"\"\" get the first file timestamp\"\"\"\n",
+    "        current_ts = timestamps[0]\n",
+    "        i=1\n",
+    "        while start_ts >= current_ts:\n",
+    "            current_ts = timestamps[i]\n",
+    "            i+=1\n",
+    "            \n",
+    "        \"\"\"add first file timestamp to the rest\"\"\"\n",
+    "        timestamps = [timestamps[i-2]] + [ts for ts in timestamps if start_ts <= ts <= end_ts]\n",
+    "        timestamps_filter= map(lambda ts: datetime.combine(self.date, ts).strftime(time_format), list(timestamps))\n",
+    "        \n",
+    "        res_list = []\n",
+    "        for ts in timestamps_filter:\n",
+    "            res_list += [f for f in files if ts in f]\n",
+    "            \n",
+    "        return res_list\n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        return list(timestamps)\n",
+    "    \n",
+    "    \n",
+    "    def read_files(self, start_ts, end_ts):\n",
+    "        \"\"\" read_files method scans the relevant folders and return a dictionary \n",
+    "            with the files relevant to the timeframe (start_ts, end_ts)\n",
+    "                {'clear'  : [files], \n",
+    "                 'medal-1': [files],\n",
+    "                 'medal-2': [files],\n",
+    "                    ...\n",
+    "                } \n",
+    "        \"\"\"    \n",
+    "    \n",
+    "        \"\"\"READING CLEAR UNIT\"\"\"\n",
+    "        path_to_clear = './data/clear/'\n",
+    "        files_all = next(os.walk(path_to_clear))[2]    \n",
+    "        target_files = self._read_files_from_folder(files_all, start_ts, end_ts)\n",
+    "        self._day_data['clear'] = [h5py.File(path_to_clear + file_name,'r+') for file_name in target_files]\n",
+    "                    \n",
+    "                    \n",
+    "        \"\"\"READING MEDAL UNITS\"\"\"\n",
+    "        \n",
+    "        path_to_medals = './data/medal*/'        \n",
+    "        for folder in glob.glob(path_to_medals):            \n",
+    "            files_all = next(os.walk(folder))[2]  \n",
+    "            medal_name = re.search(r'(medal-\\d+)', folder).group(1)\n",
+    "            target_files = self._read_files_from_folder(files_all, start_ts, end_ts)\n",
+    "            self._day_data[medal_name] = [h5py.File(folder + file_name,'r+') for file_name in target_files]\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "                        \n",
+    "    \"\"\" center_inplace and calibrate inplace read file-by-file, do the corresponding operations and write back\n",
+    "        good thing: we can process much more files like that and not be bounded by memory since each file is less than 3 GB\n",
+    "        bad thing: we can't coerse from int to float \n",
+    "    \"\"\"\n",
+    "    def center_inplace(self, device, signal):  \n",
+    "        if device+signal in self._SD_centered:\n",
+    "            print(\"Signal '{}' for '{}' has been already centered.\".format(signal, device))\n",
+    "            return\n",
+    "        else:\n",
+    "            self._SD_centered.append(device+signal)\n",
+    "            data_list = self._day_data[device]\n",
+    "            if device != 'clear': #NO OFFSET FOR CLEAR DEVICE\n",
+    "                for i, data_file in enumerate(data_list):\n",
+    "                    DC_offset = data_file[signal].attrs['removed_offset'] \n",
+    "                    #print(DC_offset)\n",
+    "                    data_file[signal][:] = data_file[signal][:] + DC_offset\n",
+    "                    self._day_data[device][i] = data_file\n",
+    "\n",
+    "            \n",
+    "    def calibrate_inplace(self, device, signal):\n",
+    "        if device+signal in self._SD_calibrated:\n",
+    "            print(\"Signal '{}' for '{}' has been already calibrated.\".format(signal, device))\n",
+    "            return\n",
+    "        else:\n",
+    "            self._SD_calibrated.append(device+signal)\n",
+    "            data_list = self._day_data[device]\n",
+    "            for i, data_file in enumerate(data_list):\n",
+    "                factor = data_file[signal].attrs['calibration_factor']\n",
+    "                #print(factor)\n",
+    "                data_file[signal][:] = (data_file[signal][:] * factor)\n",
+    "                self._day_data[device][i] = data_file\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "    def it_read_signal(self, device, signal):\n",
+    "        \"\"\"it_read_signal method \"\"\"\n",
+    "        files = self._day_data[device]\n",
+    "        return map(lambda f: {'DC_offset': f[signal].attrs['removed_offset'],\n",
+    "                              'calibration_factor': f[signal].attrs['calibration_factor'],\n",
+    "                              'values': f[signal][:]\n",
+    "                             }, \n",
+    "                   files)      \n",
+    "            \n",
+    "\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Data Reading and Exploration"
+    "###  1. Data Reading and Exploration"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read files and prepare data for plotting"
+    "### Reading files"
    ]
   },
   {
@@ -129,29 +188,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "blond = Blond(date(2018,10,5))\n",
+    "blond = Blond(date(2016,10,5))\n",
     "\n",
     "\"\"\" Define a timeframe\"\"\"\n",
-    "start_hm = time(0,30) # start_hours_minutes\n",
-    "end_hm   = time(1,30)\n",
+    "start_ts = time(6,17,50) # start_hours_minutes\n",
+    "end_ts   = time(6,18,1)\n",
     "\n",
     "\"\"\"Read MEDAL and CLEAR data \"\"\"\n",
-    "it_medal = blond.read_medal(start_hm, end_hm)\n",
-    "it_clear = blond.read_clear(start_hm, end_hm)\n",
-    "\n",
-    "\n",
-    "\"\"\"center and calibrate MEDAL data\"\"\"\n",
-    "it_data_calibrated = blond.it_calibrate(blond.it_center_signal(it_medal, 'current1'), 'current1')\n",
-    "\n",
-    "\"\"\"define a signal and prepare data to the format suitable for plotting\"\"\"\n",
-    "signal = 'current1'\n",
-    "d = blond.merge_into_dict(it_data_calibrated, 'current1')\n",
+    "blond.read_files(start_ts, end_ts)\n",
     "data={}\n",
-    "it_merged_data = itertools.chain(*pd.DataFrame(data = d).values)\n",
+    "\n",
+    "\"\"\"Checking if files have been retrieved\"\"\"\n",
+    "blond.list_files()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploration\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"signals acquisited by MEDAL\"\"\"\n",
+    "medal_file = blond.list_files()['medal-1'][0]\n",
+    "[key for key in medal_file.keys()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"signals acquisited by CLEAR\"\"\"\n",
+    "clear_file = blond.list_files()['clear'][0]\n",
+    "[key for key in clear_file.keys()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Centering and calibrating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = 'medal-1'\n",
+    "signal = 'voltage'\n",
+    "#blond.center(device, signal)\n",
+    "#blond.calibrate(device, signal)\n",
+    "it_signal = blond.it_read_signal(device, signal)\n",
     "\n",
     "\n",
-    "\"\"\"read first 10,000,000 values\"\"\"\n",
-    "data['medals_'+signal] = list(itertools.islice(it_merged_data, 10000000) )"
+    "\"\"\"Try to materialize map to numpy array - run this cell only once\"\"\"\n",
+    "data[device+'_'+signal] = list(it_signal)"
    ]
   },
   {
@@ -161,6 +263,104 @@
    "outputs": [],
    "source": [
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part II. Data Visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Function to run dash app in jupyter:\n",
+    "https://community.plot.ly/t/can-i-run-dash-app-in-jupyter/5235\n",
+    "\"\"\"\n",
+    "from IPython import display\n",
+    "def show_app(app,  # type: dash.Dash\n",
+    "             port=8050,\n",
+    "             width=700,\n",
+    "             height=350,\n",
+    "             offline=True,\n",
+    "             style=True,\n",
+    "             **dash_flask_kwargs):\n",
+    "    \"\"\"\n",
+    "    Run the application inside a Jupyter notebook and show an iframe with it\n",
+    "    :param app:\n",
+    "    :param port:\n",
+    "    :param width:\n",
+    "    :param height:\n",
+    "    :param offline:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    url = 'http://localhost:' + str(port)  + '/notebooks'\n",
+    "    iframe = '<iframe src=\"{url}\" width={width} height={height}></iframe>'.format(url=url,\n",
+    "                                                                                  width=width,\n",
+    "                                                                                  height=height)\n",
+    "    display.display_html(iframe, raw=True)\n",
+    "    if offline:\n",
+    "        app.css.config.serve_locally = True\n",
+    "        app.scripts.config.serve_locally = True\n",
+    "    if style:\n",
+    "        external_css = [\"https://fonts.googleapis.com/css?family=Raleway:400,300,600\",\n",
+    "                        \"https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\",\n",
+    "                        \"http://getbootstrap.com/dist/css/bootstrap.min.css\", ]\n",
+    "\n",
+    "        for css in external_css:\n",
+    "            app.css.append_css({\"external_url\": css})\n",
+    "\n",
+    "        external_js = [\"https://code.jquery.com/jquery-3.2.1.min.js\",\n",
+    "                       \"https://cdn.rawgit.com/plotly/dash-app-stylesheets/a3401de132a6d0b652ba11548736b1d1e80aa10d/dash-goldman-sachs-report-js.js\",\n",
+    "                       \"http://getbootstrap.com/dist/js/bootstrap.min.js\"]\n",
+    "\n",
+    "        for js in external_js:\n",
+    "            app.scripts.append_script({\"external_url\": js})\n",
+    "\n",
+    "    return app.run_server(debug=False,  # needs to be false in Jupyter\n",
+    "                          port=port,\n",
+    "                          **dash_flask_kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dash\n",
+    "import dash_core_components as dcc\n",
+    "import dash_html_components as html\n",
+    "\n",
+    "app = dash.Dash()\n",
+    "\n",
+    "app.layout = html.Div(children=[\n",
+    "    html.H1(children='Hello Dash'),\n",
+    "\n",
+    "    html.Div(children='''\n",
+    "        Dash: A web application framework for Python.\n",
+    "    '''),\n",
+    "\n",
+    "    dcc.Graph(\n",
+    "        id='example-graph',\n",
+    "        figure={\n",
+    "            'data': [\n",
+    "                {'x': [1, 2, 3], 'y': [4, 1, 5], 'type': 'line', 'name': 'SF'}\n",
+    "            ],\n",
+    "            'layout': {\n",
+    "                'title': 'Dash Data Visualization'\n",
+    "            }\n",
+    "        }\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "\n",
+    "show_app(app)"
    ]
   },
   {
