--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -152,20 +152,31 @@
     "                #print(factor)\n",
     "                data_file[signal][:] = (data_file[signal][:] * factor)\n",
     "                self._day_data[device][i] = data_file\n",
+    "                \n",
+    "    def center_and_calibrate(self, dict_signal):\n",
+    "        data_calibrated = {}\n",
+    "        signal_data = dict_signal['attributes']\n",
+    "        for data in signal_data:        \n",
+    "            data_calibrated[dict_signal['signal']] = ((data['values'] + data['DC_offset']) * data['calibration_factor']).astype(\"<f4\")\n",
+    "    \n",
+    "        return data_calibrated\n",
+    "    \n",
+    "        \n",
     "            \n",
     "            \n",
     "            \n",
-    "    def it_read_signal(self, device, signal):\n",
+    "    def dict_read_signal(self, device, signal):\n",
     "        \"\"\"it_read_signal method \"\"\"\n",
     "        files = self._day_data[device]\n",
-    "        return map(lambda f: {'DC_offset': f[signal].attrs['removed_offset'],\n",
+    "        return {'signal': device+'_'+signal, \n",
+    "                'attributes': list(map(lambda f: {'DC_offset': 0 if device == 'clear' else f[signal].attrs['removed_offset'],\n",
     "                              'calibration_factor': f[signal].attrs['calibration_factor'],\n",
     "                              'values': f[signal][:]\n",
-    "                             }, \n",
-    "                   files)      \n",
-    "            \n",
-    "\n",
-    "    \n"
+    "                             }, files))\n",
+    "                               \n",
+    "               }\n",
+    "        \n",
+    "           \n"
    ]
   },
   {
@@ -192,11 +203,11 @@
     "\n",
     "\"\"\" Define a timeframe\"\"\"\n",
     "start_ts = time(6,17,50) # start_hours_minutes\n",
-    "end_ts   = time(6,18,1)\n",
+    "end_ts   = time(6,17,55)\n",
     "\n",
     "\"\"\"Read MEDAL and CLEAR data \"\"\"\n",
     "blond.read_files(start_ts, end_ts)\n",
-    "data={}\n",
+    "\n",
     "\n",
     "\"\"\"Checking if files have been retrieved\"\"\"\n",
     "blond.list_files()\n",
@@ -245,15 +256,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = 'medal-1'\n",
-    "signal = 'voltage'\n",
-    "#blond.center(device, signal)\n",
-    "#blond.calibrate(device, signal)\n",
-    "it_signal = blond.it_read_signal(device, signal)\n",
+    "device = 'medal-2'\n",
+    "signal = 'current1'\n",
+    "\n",
+    "\"\"\"Raw signal with offset and calibration factor attributes\"\"\"\n",
+    "dict_signal = blond.dict_read_signal(device, signal)\n",
+    "print(dict_signal)\n",
     "\n",
     "\n",
-    "\"\"\"Try to materialize map to numpy array - run this cell only once\"\"\"\n",
-    "data[device+'_'+signal] = list(it_signal)"
+    "\"\"\"calibrated signal\"\"\"\n",
+    "blond.center_and_calibrate(dict_signal)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -261,9 +275,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
