--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -63,7 +63,15 @@
     "    \n",
     "\n",
     "    def _read_files_from_folder(self, files, start_ts, end_ts):\n",
-    "        \"\"\"gets file in the folder w.r.t. to the timeframe start_ts - end_ts\"\"\"\n",
+    "        \"\"\"This method gets file in the folder w.r.t. to the timeframe start_ts - end_ts\n",
+    "        \n",
+    "            How it works:\n",
+    "            1. gets a list of files in the folder\n",
+    "            2. extracts timestamps with _regex_map() method and converts it to datetime.time()\n",
+    "            3. fetch the first file which fits the timeframe\n",
+    "            4. add the remaining files by the filter start_timestamp <= file_timestamp <= end_timestamp\n",
+    "                        \n",
+    "        \"\"\"\n",
     "        pattern = r'(\\d{4}-\\d{2}-\\d{2}T\\d{2}-\\d{2}-\\d{2})'\n",
     "        timestamps = self._regex_map(pattern, files)\n",
     "        time_format = '%Y-%m-%dT%H-%M-%S'\n",
@@ -85,15 +93,10 @@
     "            res_list += [f for f in files if ts in f]\n",
     "            \n",
     "        return res_list\n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        return list(timestamps)\n",
     "    \n",
     "    \n",
     "    def read_files(self, start_ts, end_ts):\n",
-    "        \"\"\" read_files method scans the relevant folders and return a dictionary \n",
+    "        \"\"\" read_files() method scans the relevant folders and return a dictionary \n",
     "            with the files relevant to the timeframe (start_ts, end_ts)\n",
     "                {'clear'  : [files], \n",
     "                 'medal-1': [files],\n",
@@ -118,12 +121,11 @@
     "            target_files = self._read_files_from_folder(files_all, start_ts, end_ts)\n",
     "            self._day_data[medal_name] = [h5py.File(folder + file_name,'r+') for file_name in target_files]\n",
     "\n",
-    "    \n",
-    "    \n",
-    "                        \n",
+    "              \n",
     "    \"\"\" center_inplace and calibrate inplace read file-by-file, do the corresponding operations and write back\n",
     "        good thing: we can process much more files like that and not be bounded by memory since each file is less than 3 GB\n",
     "        bad thing: we can't coerse from int to float \n",
+    "        We do not use them.\n",
     "    \"\"\"\n",
     "    def center_inplace(self, device, signal):  \n",
     "        if device+signal in self._SD_centered:\n",
@@ -152,21 +154,10 @@
     "                #print(factor)\n",
     "                data_file[signal][:] = (data_file[signal][:] * factor)\n",
     "                self._day_data[device][i] = data_file\n",
-    "                \n",
-    "    def center_and_calibrate(self, dict_signal):\n",
-    "        data_calibrated = {}\n",
-    "        signal_data = dict_signal['attributes']\n",
-    "        for data in signal_data:        \n",
-    "            data_calibrated[dict_signal['signal']] = ((data['values'] + data['DC_offset']) * data['calibration_factor']).astype(\"<f4\")\n",
-    "    \n",
-    "        return data_calibrated\n",
-    "    \n",
-    "        \n",
-    "            \n",
-    "            \n",
-    "            \n",
+    "\n",
+    "                       \n",
     "    def dict_read_signal(self, device, signal):\n",
-    "        \"\"\"it_read_signal method \"\"\"\n",
+    "        \"\"\"reads the signal of the corresponding device and writes it to the dictionary\"\"\"\n",
     "        files = self._day_data[device]\n",
     "        return {'signal': device+'_'+signal, \n",
     "                'attributes': list(map(lambda f: {'DC_offset': 0 if device == 'clear' else f[signal].attrs['removed_offset'],\n",
@@ -175,6 +166,15 @@
     "                             }, files))\n",
     "                               \n",
     "               }\n",
+    "\n",
+    "    def center_and_calibrate(self, dict_signal):\n",
+    "        \"\"\"reads the dictionary from the dict_read_signal() method, then centers and calibrates it\"\"\"\n",
+    "        data_calibrated = {}\n",
+    "        signal_data = dict_signal['attributes']\n",
+    "        for data in signal_data:        \n",
+    "            data_calibrated[dict_signal['signal']] = ((data['values'] + data['DC_offset']) * data['calibration_factor']).astype(\"<f4\")\n",
+    "    \n",
+    "        return data_calibrated\n",
     "        \n",
     "           \n"
    ]
